Added Reverb block
- Seems to work but has a gain/saturation problem

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -23,5 +23,6 @@ install(FILES
     guitar_shelving_filter.xml
     guitar_distortion.xml
     guitar_wah_filter.xml
-    guitar_flanger.xml DESTINATION share/gnuradio/grc/blocks
+    guitar_flanger.xml
+    guitar_reverb.xml DESTINATION share/gnuradio/grc/blocks
 )
